kubernetes_manifests/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sales-rep-ai-ns # Namespace to logically isolate application resources
